started index page, added gmap

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,5 +1,15 @@
-this works
-index
 <%= current_user.name %>
-<%= current_user.tag_list%>
+
+<div>
+  <%= render 'static_pages/partials/tag_list' %>
+</div>
+
+<div>
+  <%= render 'static_pages/partials/map' %>
+</div>
+
+<div>
+
+</div>
+
 
