--- a/app/views/static_pages/partials/_tag_list.html.erb
+++ b/app/views/static_pages/partials/_tag_list.html.erb
@@ -1,12 +1,13 @@
-this is the tag list
-<%= form_tag tags_url do %>
+<%= form_tag tags_url, :remote => true do %>
   <%= text_field_tag "tag" %>
   <%= submit_tag "Add Tag" %>
 <% end %>
 <ul><h4> tags </h4>
+  <div id='tags' >
 <% current_user.tags.each do |t| %>
-  <li><%= t.name %> 
-      <%= link_to 'X', tag_path(t.name), :method => :delete %>
+  <li>
+    <%= t.name %><%= button_to 'delete', tag_path(t.name), :method => :delete, :remote => true %>
   </li>
 <% end %>
+</div>
 </ul>
