--- a/app/views/static_pages/partials/_map.html.erb
+++ b/app/views/static_pages/partials/_map.html.erb
@@ -1,14 +1,16 @@
-this is the map
 <div style='width: 800px;'>
     <div id="map" style='width: 800px; height: 400px;'></div>
 
     <script>
 handler = Gmaps.build('Google', {markers:
               {clusterer: {
-                   gridSize: 40,
+                   gridSize: 10,
                    maxZoom: 0}}});
     
       handler.buildMap({
+provider: { 
+scrollwheel: false
+},
           internal: {id: 'map'}}, function(){
             markers = handler.addMarkers(<%=raw @hash.to_json %>);
             handler.bounds.extendWith(markers);
