--- a/app/views/messages/_messages.html.erb
+++ b/app/views/messages/_messages.html.erb
@@ -1,7 +1,6 @@
-these are the messages
-<%= current_user.messages.count %>
+<%= current_user.messages.count %> unread messages
 <div id = 'show_messages'>
   <% if (current_user.messages.count > 0) %>
-    show messages
+    <%= button_to 'show messages', messages_path, :method => :get, :remote => true %>
   <% end %>
 </div>
