--- a/app/views/messages/_show_messages.html.erb
+++ b/app/views/messages/_show_messages.html.erb
@@ -1,5 +1,5 @@
 this is the show messages
 <% @messages.each do |message| %>
-  <%= message.inspect %>
+  <li>  <%= message.inspect %></li>
 <% end %>
 
