--- a/app/views/static_pages/partials/_map.html.erb
+++ b/app/views/static_pages/partials/_map.html.erb
@@ -12,7 +12,7 @@ provider: {
 scrollwheel: false
 },
           internal: {id: 'map'}}, function(){
-            markers = handler.addMarkers(<%=raw @hash.to_json %>);
+            markers = handler.addMarkers(<%=raw @main_page.map_hash.to_json %>);
             handler.bounds.extendWith(markers);
             handler.fitMapToBounds();
       });
