added foundation and some style changes

--- a/app/views/broadcasts/_index.html.erb
+++ b/app/views/broadcasts/_index.html.erb
@@ -9,6 +9,6 @@
 <div id = 'send_broadcast'>
   <%= form_tag broadcasts_url, :remote => true do %>
     <%= text_area_tag "broadcast[message]" %>
-    <%= submit_tag "Broadcast Message " %>
+    <%= submit_tag "Broadcast Message ", :class => 'button' %>
   <% end %>
 </div>
