--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,22 +2,36 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-  <div><%= f.label :name %><br />
+  <div class='row'>
+  <div class='large-4 columns'><%= f.label :name %><br />
   <%= f.text_field :name, autofocus: true %></div>
+</div>
 
-  <div><%= f.label :zip_code %><br />
+  <div class='row'>
+  <div class='large-4 columns'><%= f.label :zip_code %><br />
   <%= f.text_field :zip_code, autofocus: true %></div>
+</div>
 
-  <div><%= f.label :email %><br />
+  <div class='row'>
+  <div class='large-4 columns'><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
+</div>
 
-  <div><%= f.label :password %><br />
+  <div class='row'>
+  <div class='large-4 columns'><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
+</div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div class='row'>
+  <div class='large-4 columns'><%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+</div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class='row'>
+    <div><%= f.submit "Sign up", :class=>'button' %></div>
+</div>
 <% end %>
 
+  <div class='row'>
 <%= render "devise/shared/links" %>
+</div>
