--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,29 @@
-<header>
-<ul>
-<li><%= link_to "Home", root_path %></li>
-<li><%= link_to "Sign Out", destroy_user_session_path, method: "delete" %></li>
-</ul>
-</header>
+
+<nav class="top-bar" data-topbar>
+  <ul class="title-area">
+    <li class="name">
+      <h1><a href="#">My Site</a></h1>
+    </li>
+<!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+  </ul>
+  <section class="top-bar-section">
+    <!-- Right Nav Section -->
+    <% if current_user %>
+    <ul class="right">
+      <li>
+  <% if (current_user.messages.count > 0) %>
+         <%= link_to unread_messages, messages_path, :method => :get, :remote => true %>
+  <% end %>
+
+      </li>
+      <li class="has-dropdown">
+      <a href="#"><%= current_user.name %> </a>
+        <ul class="dropdown">
+          <li><%= link_to "Sign Out", destroy_user_session_path, 
+                          method: "delete" %></li>
+        </ul>
+      </li>
+    </ul>
+  <% end %>
+  </section>
+</nav>
