--- a/app/views/static_pages/partials/_map.html.erb
+++ b/app/views/static_pages/partials/_map.html.erb
@@ -1,14 +1,16 @@
-<div style='width: 800px;'>
-    <div id="map" style='width: 800px; height: 400px;'></div>
+<div>
+    <div id="map" style='width: 100%; height: 400px;'></div>
 
     <script>
-handler = Gmaps.build('Google', {markers:
-              {clusterer: {
+handler = Gmaps.build('Google', {
+            markers: {
+                   clusterer: {
                    gridSize: 10,
                    maxZoom: 0}}});
     
       handler.buildMap({
 provider: { 
+maxZoom: 15,
 scrollwheel: false
 },
           internal: {id: 'map'}}, function(){
