--- a/app/views/static_pages/partials/_nearby_users_list.html.erb
+++ b/app/views/static_pages/partials/_nearby_users_list.html.erb
@@ -1,9 +1,8 @@
-this is the users list
+<h4>Nearby Users</h4>
 <% for user in @main_page.nearby %>
-  <li>(<%= user.distance.round(2) %> miles)
-  <%= user.name%>
-  <%= link_to user.name, user_path(user), :remote=> true %>
-  <%= link_to 'message', new_message_path(:receiver => user), :remote=> true %>
-  <div id = 'new_message<%= user.id %>'></div>
+  <li>  <%= link_to user.name, user_path(user), :remote=> true %>
+      (<%= user.distance.round(2) %> miles)
+      <%= link_to 'message', new_message_path(:receiver => user), :remote=> true %>
+      <div id = 'new_message<%= user.id %>'></div>
   </li>
   <% end %>
