more foundation style changes

--- a/app/assets/stylesheets/broadcasts.css.scss
+++ b/app/assets/stylesheets/broadcasts.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Broadcasts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.broadcast {
+  border: 1px solid grey;
+  .from{
+    display:inline;
+  }
+  hr {
+    margin:0;
+  }
+  .message {
+    padding: 5px;
+  }
+}
