--- a/app/views/messages/_new.html.erb
+++ b/app/views/messages/_new.html.erb
@@ -1,10 +1,15 @@
 <%= form_for @message, :url => messages_path(:receiver => receiver), :remote => true do |f| %>
 
-  <div><%= f.label :subject %><br />
-  <%= f.text_field :subject, autofocus: true %></div>
+  <div class = 'row'>
+    <div class = 'large-4 columns'><%= f.label :subject %>
+    <%= f.text_field :subject, autofocus: true %></div>
+  </div>
 
-  <div><%= f.label :body %><br />
-  <%= f.text_area :body, autofocus: true %></div>
-
-  <div><%= f.submit "Send" %></div>
+  <div class = 'row'>
+    <div class = 'large-4 columns'><%= f.label :body %>
+    <%= f.text_area :body, autofocus: true %></div>
+  </div>
+  <div class = 'row'>
+    <div class= 'large-4 columns'><%= f.submit "Send", :class=>'button tiny' %></div>
+  </div>
 <% end %>
