--- a/app/views/users/show.js.erb
+++ b/app/views/users/show.js.erb
@@ -1,1 +1,3 @@
 $('#users_show').html("<%= escape_javascript(render(:partial => 'users/show', :locals =>  {:user => @user}))%> ")
+
+$('#myModal').foundation('reveal', 'open');
