--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <nav class="top-bar" data-topbar>
   <ul class="title-area">
     <li class="name">
-      <h1><a href="#">My Site</a></h1>
+    <h1><%= link_to 'Home', root_path %></h1>
     </li>
 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
   </ul>
@@ -12,7 +12,7 @@
     <ul class="right">
       <li>
   <% if (current_user.messages.count > 0) %>
-         <%= link_to unread_messages, messages_path, :method => :get, :remote => true %>
+         <%= link_to unread_messages, messages_path, :method => :get %>
   <% end %>
 
       </li>
