--- a/app/views/users/_show.html.erb
+++ b/app/views/users/_show.html.erb
@@ -11,6 +11,8 @@
         <li><%= p.name %></li>
       <% end %>
     </ul>
-  </div>
+  <div>
+    <h4>About:</h4>
+    <%= about(user) %>
 </div>
 
