--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         <ul class="dropdown">
           <li><%= link_to "Sign Out", destroy_user_session_path, 
                           method: "delete" %></li>
+          <li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
         </ul>
       </li>
     </ul>
