--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -24,6 +24,6 @@
   </div>
 
   <div id = 'broadcasts'>
-    <%= render 'broadcasts/index' %>
+    <%= render 'broadcasts/index', :broadcasts => @main_page.broadcasts, :page => 0 %>
   </div>
 </div>
